[package]
name = "lox-rs"
version = "0.1.0"
edition = "2024"
authors = ["haraldmaida"]

[dependencies]

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
bare_trait_objects = "warn"
deprecated = "warn"
explicit_outlives_requirements = "warn"
noop_method_call = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
dead_code = "warn"
#missing_docs = "warn"  # uncomment when working on docs
#variant_size_differences = "warn"  # enable when working on performance

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
unwrap_used = "forbid"
missing_errors_doc = "allow"  # remove when working on docs
missing_panics_doc = "allow"  # remove when working on docs

[[bin]]
name = "lox"
path = "src/main.rs"
