[workspace]
resolver = "3"
members = [
    "lox-core",
    "lox-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["haraldmaida"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# workspace internal dependencies
lox-core = { path = "lox-core" }

# external dependencies
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# dev-dependencies
asserting = "0.14"
proptest = "1"
trycmd = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
bare_trait_objects = "warn"
deprecated = "warn"
explicit_outlives_requirements = "warn"
noop_method_call = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
dead_code = "warn"
#missing_docs = "warn"  # uncomment when working on docs
#variant_size_differences = "warn"  # enable when working on performance

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
option_if_let_else = "allow"
print_stderr = "warn"
print_stdout = "warn"
unwrap_used = "deny"
missing_errors_doc = "allow"  # remove when working on docs
missing_panics_doc = "allow"  # remove when working on docs
