[package]
name = "lox-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# workspace internal dependencies
lox-core = { workspace = true }

# external dependencies
clap = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
asserting = { workspace = true }
trycmd = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "lox"
path = "src/main.rs"
