[package]
name = "lox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
asserting = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
