[package]
name = "lox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
dsl = []
proptest_support = ["dep:proptest"]

[dependencies]
rustc-hash = "2"
lasso = { workspace = true }
miette = { workspace = true }
proptest = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
asserting = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
